--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
         <main class="first">
             <div id="h"><h1>Tic Tac Toe game</h1></div>
 
+            <div class="display">
+                Player <span class="display-player playerX">X</span>'s turn
+            </div>
             <div id="game-board">
-                <div id="tile"></div>
-                <div id="tile"></div>
-                <div id="tile"></div>
-                <div id="tile"></div>
-                <div id="tile"></div>
-                <div id="tile"></div>
-                <div id="tile"></div>
-                <div id="tile"></div>
-                <div id="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
             </div>
 
+            <div class="display announcer hide"></div>
             <div id="again">
                 <button id="reset">Reset game</button>
             </div>
